--- a/Über-Mich.css
+++ b/Über-Mich.css
@@ -1,233 +1,3 @@
- .u-section-1 {
-  background-image: url("images/hghhy.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-1 .u-layout-wrap-1 {
-  width: calc(((100% - 1140px) / 2) + 1140px);
-  margin: 0 0 0 auto;
-}
-
-.u-section-1 .u-layout-cell-1 {
-  min-height: 723px;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding: 30px 20px;
-}
-
-.u-section-1 .u-text-1 {
-  margin: 0;
-}
-
-.u-section-1 .u-text-2 {
-  font-size: 5rem;
-  font-weight: 700;
-  margin: 8px 8px 0 0;
-}
-
-.u-section-1 .u-line-1 {
-  width: 482px;
-  transform-origin: left center 0px;
-  margin: 20px auto 0 0;
-}
-
-.u-section-1 .u-text-3 {
-  line-height: 2.2;
-  font-weight: 700;
-  margin: 34px 20px 0 0;
-}
-
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  border-style: solid;
-  padding: 0;
-}
-
-.u-section-1 .u-image-1 {
-  min-height: 723px;
-  background-image: url("images/6ec375_eaf5bfc8d33949798b320fe04eb74d3emv2.png");
-  background-position: 50% 50%;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 30px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-layout-wrap-1 {
-    width: calc(((100% - 940px) / 2) + 940px);
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 596px;
-  }
-
-  .u-section-1 .u-text-2 {
-    font-size: 4.25rem;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-line-1 {
-    width: 431px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-image-1 {
-    min-height: 596px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-layout-wrap-1 {
-    width: calc(((100% - 720px) / 2) + 720px);
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-top: 70px;
-    padding-right: 200px;
-    padding-bottom: 50px;
-  }
-
-  .u-section-1 .u-line-1 {
-    width: 321px;
-  }
-
-  .u-section-1 .u-image-1 {
-    min-height: 617px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1 .u-layout-wrap-1 {
-    width: calc(((100% - 540px) / 2) + 540px);
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-top: 50px;
-    padding-right: 50px;
-    padding-left: 10px;
-  }
-
-  .u-section-1 .u-image-1 {
-    min-height: 604px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-layout-wrap-1 {
-    width: calc(((100% - 340px) / 2) + 340px);
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-top: 55px;
-    padding-right: 10px;
-  }
-
-  .u-section-1 .u-text-2 {
-    font-size: 3.4375rem;
-  }
-
-  .u-section-1 .u-line-1 {
-    width: 320px;
-  }
-
-  .u-section-1 .u-image-1 {
-    min-height: 380px;
-  }
-}.u-section-2 .u-sheet-1 {
-  min-height: 404px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 60px 0;
-}.u-section-3 .u-sheet-1 {
-  min-height: 585px;
-}
-
-.u-section-3 .u-text-1 {
-  margin: 60px auto 0;
-}
-
-.u-section-3 .u-gallery-1 {
-  height: 396px;
-  width: 706px;
-  margin: 30px auto 60px;
-}
-
-.u-section-3 .u-carousel-indicators-1 {
-  position: absolute;
-  bottom: 10px;
-  width: auto;
-  height: auto;
-}
-
-.u-section-3 .u-carousel-item-1 {
-  margin-right: 0;
-}
-
-.u-section-3 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-3 .u-carousel-item-2 {
-  margin-right: 0;
-}
-
-.u-section-3 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-3 .u-carousel-item-3 {
-  margin-right: 0;
-}
-
-.u-section-3 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 30px;
-}
-
-.u-section-3 .u-carousel-control-1 {
-  position: absolute;
-  left: 10px;
-  width: 40px;
-  height: 40px;
-}
-
-.u-section-3 .u-carousel-control-2 {
-  position: absolute;
-  right: 10px;
-  width: 40px;
-  height: 40px;
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-gallery-1 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-3 .u-text-1 {
-    margin-top: 53px;
-  }
-
-  .u-section-3 .u-gallery-1 {
-    width: 340px;
-    margin-bottom: 53px;
-  }
+.u-section-1 .u-sheet-1 {
+  min-height: 400px;
 }
