--- a/Services.css
+++ b/Services.css
@@ -3,91 +3,85 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 559px;
+  min-height: 524px;
 }
 
 .u-section-1 .u-tabs-1 {
-  min-height: 439px;
+  min-height: 404px;
   height: auto;
   margin: 60px auto 60px 0;
 }
 
 .u-section-1 .u-tab-link-1 {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   background-image: none;
-  font-weight: 600;
+  font-weight: 400;
   padding: 10px 25px;
 }
 
 .u-section-1 .u-tab-link-2 {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   background-image: none;
-  font-weight: 600;
+  font-weight: 400;
   padding: 10px 25px;
 }
 
 .u-section-1 .u-tab-link-3 {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   background-image: none;
-  font-weight: 600;
+  font-weight: 400;
   padding: 10px 25px;
-}
-
-.u-section-1 .u-tab-pane-1 {
-  background-image: none;
 }
 
 .u-section-1 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-1 .u-image-1 {
-  width: 309px;
-  height: 327px;
-  margin: 0 auto 0 0;
+.u-section-1 .u-text-1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
-.u-section-1 .u-text-1 {
-  line-height: 2.2;
-  margin: -327px 0 0 352px;
+.u-section-1 .u-text-2 {
+  margin-top: 20px;
+  margin-bottom: 0;
+  line-height: 1.8;
+}
+
+.u-section-1 .u-text-3 {
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-btn-1 {
-  border-style: none;
-  background-image: none;
   text-transform: uppercase;
   font-size: 0.875rem;
-  letter-spacing: 2px;
-  margin: 40px auto 0 352px;
-}
-
-.u-section-1 .u-tab-pane-2 {
   background-image: none;
+  border-style: none;
+  margin: 20px auto 0 0;
 }
 
 .u-section-1 .u-container-layout-2 {
   padding: 30px;
 }
 
-.u-section-1 .u-text-2 {
+.u-section-1 .u-text-4 {
   line-height: 1.8;
   margin: 0;
-}
-
-.u-section-1 .u-tab-pane-3 {
-  background-image: none;
 }
 
 .u-section-1 .u-container-layout-3 {
   padding: 30px;
 }
 
-.u-section-1 .u-text-3 {
+.u-section-1 .u-text-5 {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.u-section-1 .u-text-4 {
+.u-section-1 .u-text-6 {
   margin-left: 0;
   margin-bottom: 0;
 }
@@ -95,8 +89,9 @@
 .u-section-1 .u-btn-2 {
   margin-left: 0;
   margin-right: 0;
-  border-style: solid;
+  border-style: none;
   text-transform: uppercase;
+  background-image: none;
 }
 
 @media (max-width: 1199px) {
@@ -104,48 +99,12 @@
     margin-right: initial;
     margin-left: initial;
   }
-
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-left: 338px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: 338px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-image-1 {
-    height: 341px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: -341px;
-    margin-left: 337px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 19px;
-    margin-right: 156px;
-    margin-left: auto;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 181px;
-    height: 200px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: -200px;
-    margin-left: 197px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -157,41 +116,17 @@
     padding-left: 10px;
     padding-right: 10px;
   }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-tabs-1 {
-    min-height: 880px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-1 {
-    height: 277px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 11px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 32px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-} .u-section-2 {
+}.u-section-2 .u-sheet-1 {
+  min-height: 400px;
+} .u-section-3 {
   background-image: none;
 }
 
-.u-section-2 .u-sheet-1 {
+.u-section-3 .u-sheet-1 {
   min-height: 501px;
 }
 
-.u-section-2 .u-text-1 {
+.u-section-3 .u-text-1 {
   font-size: 3rem;
   font-weight: 700;
   background-image: none;
@@ -199,98 +134,98 @@
   margin: 60px auto 0;
 }
 
-.u-section-2 .u-text-2 {
+.u-section-3 .u-text-2 {
   font-style: italic;
   width: 864px;
   margin: 20px auto 0;
 }
 
-.u-section-2 .u-accordion-1 {
+.u-section-3 .u-accordion-1 {
   margin-bottom: 60px;
   margin-top: 30px;
 }
 
-.u-section-2 .u-accordion-link-1 {
+.u-section-3 .u-accordion-link-1 {
   background-image: none;
   font-size: 1.125rem;
   font-weight: 600;
   padding: 25px 30px;
 }
 
-.u-section-2 .u-icon-1 {
+.u-section-3 .u-icon-1 {
   height: 25px;
   width: 25px;
   background-image: none;
 }
 
-.u-section-2 .u-accordion-pane-1 {
+.u-section-3 .u-accordion-pane-1 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-1 {
+.u-section-3 .u-container-layout-1 {
   padding: 20px 30px;
 }
 
-.u-section-2 .u-accordion-link-2 {
+.u-section-3 .u-accordion-link-2 {
   background-image: none;
   font-size: 1.125rem;
   font-weight: 600;
   padding: 25px 30px;
 }
 
-.u-section-2 .u-icon-2 {
+.u-section-3 .u-icon-2 {
   height: 25px;
   width: 25px;
   background-image: none;
 }
 
-.u-section-2 .u-accordion-pane-2 {
+.u-section-3 .u-accordion-pane-2 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-2 {
+.u-section-3 .u-container-layout-2 {
   padding: 20px 30px;
 }
 
-.u-section-2 .u-accordion-link-3 {
+.u-section-3 .u-accordion-link-3 {
   background-image: none;
   font-size: 1.125rem;
   font-weight: 600;
   padding: 25px 30px;
 }
 
-.u-section-2 .u-icon-3 {
+.u-section-3 .u-icon-3 {
   height: 25px;
   width: 25px;
   background-image: none;
 }
 
-.u-section-2 .u-accordion-pane-3 {
+.u-section-3 .u-accordion-pane-3 {
   min-height: 150px;
 }
 
-.u-section-2 .u-container-layout-3 {
+.u-section-3 .u-container-layout-3 {
   padding: 20px 30px;
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-text-2 {
+  .u-section-3 .u-text-2 {
     width: 720px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-text-2 {
+  .u-section-3 .u-text-2 {
     width: 540px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-text-1 {
+  .u-section-3 .u-text-1 {
     font-size: 1.5rem;
   }
 
-  .u-section-2 .u-text-2 {
+  .u-section-3 .u-text-2 {
     width: 340px;
   }
 }
