--- a/Startseite.css
+++ b/Startseite.css
@@ -456,16 +456,325 @@
     margin-left: 25px;
     margin-right: 25px;
   }
-} .u-section-3 {
+}.u-section-3 .u-sheet-1 {
+  min-height: 676px;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 60px auto 0;
+}
+
+.u-section-3 .u-gallery-1 {
+  height: 472px;
+  width: 706px;
+  margin: 30px auto 59px;
+}
+
+.u-section-3 .u-carousel-indicators-1 {
+  position: absolute;
+  bottom: 10px;
+  width: auto;
+  height: auto;
+}
+
+.u-section-3 .u-carousel-item-1 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-2 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-3 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-4 {
+  height: 472px;
+  margin: 0;
+}
+
+.u-section-3 .u-over-slide-4 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-5 {
+  height: 472px;
+  margin: 0;
+}
+
+.u-section-3 .u-over-slide-5 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-6 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-6 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-7 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-7 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-8 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-8 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-9 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-9 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-10 {
+  height: 472px;
+  margin: 0;
+}
+
+.u-section-3 .u-over-slide-10 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-11 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-11 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-12 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-12 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-13 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-13 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-14 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-14 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-item-15 {
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-over-slide-15 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 30px;
+}
+
+.u-section-3 .u-carousel-control-1 {
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.u-section-3 .u-carousel-control-2 {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: auto;
+  right: 10px;
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-gallery-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-gallery-1 {
+    width: 340px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 609px;
+}
+
+.u-section-4 .u-text-1 {
+  margin: 4px auto 0;
+}
+
+.u-section-4 .u-list-1 {
+  width: 660px;
+  grid-template-rows: auto auto auto;
+  margin: 7px auto 0;
+}
+
+.u-section-4 .u-repeater-1 {
+  grid-template-columns: 100%;
+  grid-gap: 0px 0px;
+  min-height: 546px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 20px 30px;
+}
+
+.u-section-4 .u-text-2 {
+  margin-top: 0;
+}
+
+.u-section-4 .u-text-3 {
+  margin: 20px 0 0;
+}
+
+.u-section-4 .u-list-item-2 {
+  background-size: auto;
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-4 .u-text-4 {
+  margin-top: 0;
+  text-transform: none;
+}
+
+.u-section-4 .u-text-5 {
+  margin: 20px 0 0;
+}
+
+.u-section-4 .u-list-item-3 {
+  background-size: auto;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-4 .u-text-6 {
+  margin-top: 0;
+  text-transform: none;
+}
+
+.u-section-4 .u-text-7 {
+  margin: 20px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-list-1 {
+    height: auto;
+  }
+
+  .u-section-4 .u-text-2 {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-list-1 {
+    width: 540px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-list-1 {
+    width: 340px;
+  }
+} .u-section-5 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/rsz__mg_0097.jpg");
   background-position: 50% 50%;
 }
 
-.u-section-3 .u-sheet-1 {
+.u-section-5 .u-sheet-1 {
   min-height: 696px;
 }
 
-.u-section-3 .u-icon-1 {
+.u-section-5 .u-icon-1 {
   width: 100px;
   height: 100px;
   --animation-custom_in-translate_x: 50px;
@@ -476,13 +785,13 @@
   margin: 182px auto 0;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-5 .u-text-1 {
   text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
   font-size: 3rem;
   margin: 26px 109px 0;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-5 .u-text-2 {
   font-family: Roboto, sans-serif;
   letter-spacing: 0px;
   text-transform: none;
@@ -499,90 +808,90 @@
   margin: 30px auto 60px;
 }
 
-.u-section-3 .u-btn-1 {
+.u-section-5 .u-btn-1 {
   background-image: none;
   padding: 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 574px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-5 .u-text-1 {
     margin-left: 9px;
     margin-right: 9px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 490px;
   }
 
-  .u-section-3 .u-icon-1 {
+  .u-section-5 .u-icon-1 {
     margin-top: 85px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-5 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 481px;
   }
 
-  .u-section-3 .u-icon-1 {
+  .u-section-5 .u-icon-1 {
     margin-top: 182px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-5 .u-text-1 {
     font-size: 2.25rem;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-5 .u-text-2 {
     width: 540px;
     font-size: 1.5rem;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
+  .u-section-5 .u-sheet-1 {
     min-height: 447px;
   }
 
-  .u-section-3 .u-icon-1 {
+  .u-section-5 .u-icon-1 {
     width: 78px;
     height: 78px;
     margin-top: 60px;
     padding: 0;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-5 .u-text-1 {
     font-size: 2.375rem;
     width: auto;
     margin-left: 19px;
     margin-right: 19px;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-5 .u-text-2 {
     width: auto;
     font-size: 1.25rem;
     margin-left: 0;
     margin-right: 0;
   }
-} .u-section-4 {
+} .u-section-6 {
   background-image: none;
 }
 
-.u-section-4 .u-sheet-1 {
+.u-section-6 .u-sheet-1 {
   min-height: 736px;
 }
 
-.u-section-4 .u-group-1 {
+.u-section-6 .u-group-1 {
   width: 827px;
   min-height: 594px;
   background-image: none;
@@ -592,11 +901,11 @@
   margin: 60px auto;
 }
 
-.u-section-4 .u-container-layout-1 {
+.u-section-6 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-4 .u-text-1 {
+.u-section-6 .u-text-1 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
@@ -605,45 +914,45 @@
   margin: 0;
 }
 
-.u-section-4 .u-form-1 {
+.u-section-6 .u-form-1 {
   height: 430px;
   width: 703px;
   margin: 15px auto 0;
 }
 
-.u-section-4 .u-input-1 {
+.u-section-6 .u-input-1 {
   font-size: 1.25rem;
 }
 
-.u-section-4 .u-input-2 {
+.u-section-6 .u-input-2 {
   font-size: 1.25rem;
 }
 
-.u-section-4 .u-form-group-3 {
+.u-section-6 .u-form-group-3 {
   margin-left: 0;
 }
 
-.u-section-4 .u-input-3 {
+.u-section-6 .u-input-3 {
   font-size: 1.25rem;
 }
 
-.u-section-4 .u-form-group-4 {
+.u-section-6 .u-form-group-4 {
   margin-left: 0;
 }
 
-.u-section-4 .u-input-4 {
+.u-section-6 .u-input-4 {
   font-size: 1.25rem;
 }
 
-.u-section-4 .u-form-group-5 {
+.u-section-6 .u-form-group-5 {
   margin-left: 0;
 }
 
-.u-section-4 .u-input-5 {
+.u-section-6 .u-input-5 {
   font-size: 1.25rem;
 }
 
-.u-section-4 .u-btn-1 {
+.u-section-6 .u-btn-1 {
   background-image: none;
   border-style: none;
   font-size: 1.125rem;
@@ -655,40 +964,40 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-6 .u-sheet-1 {
     min-height: 631px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-6 .u-sheet-1 {
     min-height: 483px;
   }
 
-  .u-section-4 .u-group-1 {
+  .u-section-6 .u-group-1 {
     width: 720px;
   }
 
-  .u-section-4 .u-form-1 {
+  .u-section-6 .u-form-1 {
     width: 660px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-6 .u-sheet-1 {
     min-height: 362px;
   }
 
-  .u-section-4 .u-group-1 {
+  .u-section-6 .u-group-1 {
     width: 540px;
   }
 
-  .u-section-4 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
   }
 
-  .u-section-4 .u-form-1 {
+  .u-section-6 .u-form-1 {
     height: 433px;
     margin-right: initial;
     margin-left: initial;
@@ -697,16 +1006,16 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-sheet-1 {
+  .u-section-6 .u-sheet-1 {
     min-height: 228px;
   }
 
-  .u-section-4 .u-group-1 {
+  .u-section-6 .u-group-1 {
     width: 340px;
     min-height: 707px;
   }
 
-  .u-section-4 .u-container-layout-1 {
+  .u-section-6 .u-container-layout-1 {
     padding-left: 25px;
     padding-right: 25px;
   }
