change Kontakt page, fix Kontakt button in Start
add Flo picture in Kontakt page, fix linking of Kontakt button in Startseite

--- a/Kontakt.css
+++ b/Kontakt.css
@@ -1,139 +1,149 @@
+ .u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
-} .u-section-2 {
-  background-image: none;
+  min-height: 862px;
 }
 
-.u-section-2 .u-sheet-1 {
-  min-height: 736px;
+.u-section-1 .u-layout-wrap-1 {
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
-.u-section-2 .u-group-1 {
-  width: 827px;
-  min-height: 594px;
-  background-image: none;
-  --animation-custom_in-scale: 1;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 300px;
-  margin: 60px auto;
+.u-section-1 .u-image-1 {
+  min-height: 692px;
+  background-image: url("images/rsz__mg_0615.jpg");
+  background-position: 50% 50%;
 }
 
-.u-section-2 .u-container-layout-1 {
+.u-section-1 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-2 .u-text-1 {
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 0.3;
-  margin: 0;
-}
-
-.u-section-2 .u-form-1 {
-  height: 430px;
-  width: 703px;
-  margin: 15px auto 0;
-}
-
-.u-section-2 .u-input-1 {
-  font-size: 1.25rem;
-}
-
-.u-section-2 .u-input-2 {
-  font-size: 1.25rem;
-}
-
-.u-section-2 .u-form-group-3 {
-  margin-left: 0;
-}
-
-.u-section-2 .u-input-3 {
-  font-size: 1.25rem;
-}
-
-.u-section-2 .u-form-group-4 {
-  margin-left: 0;
-}
-
-.u-section-2 .u-input-4 {
-  font-size: 1.25rem;
-}
-
-.u-section-2 .u-form-group-5 {
-  margin-left: 0;
-}
-
-.u-section-2 .u-input-5 {
-  font-size: 1.25rem;
-}
-
-.u-section-2 .u-btn-1 {
+.u-section-1 .u-layout-cell-2 {
+  min-height: 749px;
   background-image: none;
-  border-style: none;
-  font-size: 1.125rem;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 40px 30px;
+}
+
+.u-section-1 .u-form-1 {
+  height: 615px;
+  width: 616px;
+  margin: 19px auto 0;
+}
+
+.u-section-1 .u-text-1 {
+  margin-left: 0;
+  font-size: 1.375rem;
+  font-weight: 700;
+  line-height: 1.4;
+}
+
+.u-section-1 .u-form-group-5 {
+  margin-left: 0;
+}
+
+.u-section-1 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-2 {
+  letter-spacing: 0px;
+  background-image: none;
+  font-size: 1.25rem;
+  text-transform: none;
   width: 100%;
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1px;
-  padding: 16px 0 18px;
+  font-weight: 700;
+  padding: 11px 0 12px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 631px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 731px;
+  }
+
+  .u-section-1 .u-image-1 {
+    min-height: 571px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 618px;
+  }
+
+  .u-section-1 .u-form-1 {
+    height: 566px;
+    width: 567px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 483px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 724px;
   }
 
-  .u-section-2 .u-group-1 {
-    width: 720px;
+  .u-section-1 .u-image-1 {
+    min-height: 715px;
   }
 
-  .u-section-2 .u-form-1 {
-    width: 660px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 362px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 396px;
   }
 
-  .u-section-2 .u-group-1 {
-    width: 540px;
+  .u-section-1 .u-image-1 {
+    min-height: 536px;
   }
 
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 20px;
-    padding-right: 20px;
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
-  .u-section-2 .u-form-1 {
-    height: 433px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 736px;
+  }
+
+  .u-section-1 .u-form-1 {
+    height: 615px;
+    width: 470px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 228px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 32px;
   }
 
-  .u-section-2 .u-group-1 {
-    width: 340px;
-    min-height: 707px;
+  .u-section-1 .u-image-1 {
+    min-height: 337px;
   }
 
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 25px;
-    padding-right: 25px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-form-1 {
+    height: 319px;
+    width: 320px;
   }
 }
