correct responsiveness for mobile devices

--- a/nicepage.css
+++ b/nicepage.css
@@ -41270,24 +41270,37 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1rem;
 }
 @media (max-width: 1199px) {
+  .u-header .u-sheet-1 {
+    min-height: 136px;
+  }
+
   .u-header .u-social-icons-1 {
     margin-top: -60px;
     margin-right: 0;
   }
 
   .u-header .u-menu-1 {
+    width: auto;
     margin-top: -31px;
-    margin-right: auto;
+    margin-right: 39px;
+    margin-bottom: 44px;
   }
 }
+@media (max-width: 991px) {
+  .u-header .u-social-icons-1 {
+    margin-top: -60px;
+  }
 
+  .u-header .u-menu-1 {
+    margin-right: 39px;
+  }
+}
 @media (max-width: 767px) {
   .u-header .u-sheet-1 {
     min-height: 148px;
   }
 
   .u-header .u-image-1 {
-    margin-top: 9px;
     margin-left: auto;
   }
 
@@ -41298,20 +41311,11 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-header .u-menu-1 {
     margin-top: 20px;
-    margin-bottom: 9px;
   }
 }
 @media (max-width: 575px) {
   .u-header .u-sheet-1 {
     min-height: 165px;
-  }
-
-  .u-header .u-image-1 {
-    margin-top: 0;
-  }
-
-  .u-header .u-menu-1 {
-    margin-bottom: 18px;
   }
 }
 .u-footer .u-sheet-1 {
@@ -41412,7 +41416,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-layout-cell-3 {
-    min-height: 160px;
+    min-height: 182px;
   }
 
   .u-footer .u-container-layout-3 {
@@ -41421,10 +41425,11 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-footer .u-social-icons-1 {
-    width: 127px;
+    margin-top: 11px;
   }
 
   .u-footer .u-position-2 {
+    margin-top: 26px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -41443,18 +41448,21 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-right: 20px;
   }
 
-  .u-footer .u-layout-cell-3 {
-    min-height: 100px;
-  }
-
   .u-footer .u-container-layout-3 {
     padding-left: 30px;
     padding-right: 30px;
   }
 
   .u-footer .u-social-icons-1 {
+    margin-top: 0;
     margin-right: auto;
     margin-left: 0;
+  }
+
+  .u-footer .u-position-2 {
+    margin-top: 37px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 @media (max-width: 767px) {
