--- a/About.css
+++ b/About.css
@@ -3,25 +3,25 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 837px;
+  min-height: 678px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 677px;
-  height: 677px;
+  width: 668px;
+  height: 668px;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 92px 0 0 auto;
+  margin: 0 0 0 auto;
 }
 
 .u-section-1 .u-group-1 {
   width: 646px;
-  min-height: 664px;
+  min-height: 646px;
   height: auto;
-  margin: -720px auto 57px 0;
+  margin: -657px auto 21px 0;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -35,75 +35,90 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 59px 0 0;
+  margin: 40px 0 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   line-height: 1.8;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 18px 179px 0 0;
+  margin: 73px 70px 0 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 761px;
+    min-height: 634px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 650px;
-    height: 626px;
-    margin-top: 134px;
+    width: 582px;
+    height: 582px;
+    margin-top: 8px;
   }
 
   .u-section-1 .u-group-1 {
     width: 510px;
+    min-height: 618px;
+    margin-top: -618px;
+    margin-bottom: -28px;
     height: auto;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 0;
+    width: auto;
+    margin-top: 15px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-right: 73px;
+    margin-top: 28px;
+    margin-right: 80px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1032px;
+    min-height: 1005px;
   }
 
   .u-section-1 .u-image-1 {
-    width: 696px;
-    height: 673px;
-    margin-top: 369px;
+    width: 526px;
+    height: 526px;
+    margin-top: 12px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 548px;
-    margin-top: -1018px;
-    margin-bottom: 470px;
+    min-height: 698px;
+    margin-top: -983px;
+    margin-bottom: -160px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 5px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 15px;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1201px;
+    min-height: 1023px;
   }
 
   .u-section-1 .u-image-1 {
     height: 504px;
-    margin-top: 697px;
+    margin-top: 7px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -111,8 +126,8 @@
 
   .u-section-1 .u-group-1 {
     min-height: 571px;
-    margin-top: -1119px;
-    margin-bottom: 60px;
+    margin-top: -1009px;
+    margin-bottom: -60px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -121,43 +136,72 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 884px;
+    min-height: 1070px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 315px;
-    margin-top: 551px;
+    height: 340px;
+    margin-top: 716px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 520px;
-    margin-top: -816px;
+    min-height: 701px;
+    margin-top: -1056px;
+    margin-bottom: 60px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 0;
-  }
 }.u-section-2 .u-sheet-1 {
-  min-height: 532px;
+  min-height: 714px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 0 0 60px;
+  margin: 15px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 841px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 938px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1196px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1485px;
+  }
 }.u-section-3 .u-sheet-1 {
-  min-height: 639px;
+  min-height: 1662px;
   margin-bottom: 0;
 }
 
 .u-section-3 .u-gallery-1 {
   height: 1577px;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin: 25px 0 60px;
 }
 
 .u-section-3 .u-gallery-inner-1 {
@@ -212,21 +256,25 @@
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 548px;
+    min-height: 1385px;
   }
 
   .u-section-3 .u-gallery-1 {
     height: 1300px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1103px;
+    min-height: 2574px;
   }
 
   .u-section-3 .u-gallery-1 {
     height: 2489px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-gallery-inner-1 {
@@ -241,6 +289,8 @@
 
   .u-section-3 .u-gallery-1 {
     height: 6720px;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-gallery-inner-1 {
@@ -255,5 +305,7 @@
 
   .u-section-3 .u-gallery-1 {
     height: 4231px;
+    margin-right: initial;
+    margin-left: initial;
   }
 }
