Fix missing images

--- a/nicepage.css
+++ b/nicepage.css
@@ -41559,6 +41559,97 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 /*end-variables sitestylecss*/
+ .u-header {
+  background-image: none;
+}
+
+.u-header .u-sheet-1 {
+  min-height: 117px;
+}
+
+.u-header .u-image-1 {
+  width: 308px;
+  height: 110px;
+  margin: 1px auto 0 0;
+}
+
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
+}
+
+.u-header .u-menu-1 {
+  margin: -71px 0 41px auto;
+}
+
+.u-header .u-nav-1 {
+  font-weight: 500;
+  font-size: 1.125rem;
+  text-transform: uppercase;
+  letter-spacing: normal;
+}
+
+.u-header .u-nav-2 {
+  font-size: 1.25rem;
+}
+@media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    width: 308px;
+    height: 111px;
+  }
+
+  .u-header .u-menu-1 {
+    width: auto;
+    margin-top: 20px;
+    margin-right: 0;
+  }
+}
+@media (max-width: 991px) {
+  .u-header .u-menu-1 {
+    margin-top: -72px;
+  }
+}
+
+
+.u-footer .u-sheet-1 {
+  min-height: 153px;
+}
+
+.u-footer .u-image-1 {
+  width: 282px;
+  height: 101px;
+  margin: 26px auto 0 0;
+}
+
+.u-footer .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
+}
+
+.u-footer .u-menu-1 {
+  margin: -101px 0 0 auto;
+}
+
+.u-footer .u-nav-2 {
+  font-size: 1.25rem;
+}
+
+.u-footer .u-text-1 {
+  margin: 26px 15px 14px auto;
+}
+@media (max-width: 1199px) {
+  .u-footer .u-image-1 {
+    width: 282px;
+    height: 101px;
+  }
+
+  .u-footer .u-menu-1 {
+    margin-top: -101px;
+  }
+}
+
+
+
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
