--- a/nicepage.css
+++ b/nicepage.css
@@ -1089,7 +1089,9 @@ ol {
 .u-text a,
 .u-post-content a,
 .u-tab-item a,
-.u-nav-item a {
+.u-nav-item a,
+.u-filter-item a,
+.u-product-control.u-text a {
   font-size: inherit;
   font-family: inherit;
   line-height: inherit;
@@ -2353,7 +2355,7 @@ a {
 }
 .u-label-left label:nth-child(1) {
   flex: none;
-  width: 100px;
+  min-width: 100px;
 }
 .u-label-left label + input,
 .u-label-left label + textarea,
@@ -7284,54 +7286,84 @@ section.u-image:not(.u-hover-box),
 }
 .u-expanded-width {
   width: 100% !important;
-  margin-left: 0 !important;
-  margin-right: 0 !important;
 }
 @media (min-width: 1400px) {
   .u-expanded-width-xxl {
     width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
 @media (min-width: 1200px) {
   .u-xl-mode .u-expanded-width-xl {
     width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
 @media (min-width: 1200px) and (max-width: 1399px) {
   .u-xxl-mode .u-expanded-width-xl {
     width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .u-expanded-width-lg {
     width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .u-expanded-width-md {
     width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
   .u-expanded-width-sm {
     width: 100% !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
   }
 }
 @media (max-width: 575px) {
   .u-expanded-width-xs {
     width: 100% !important;
+  }
+}
+.u-expanded-width:not(.custom-expanded) {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+@media (min-width: 1400px) {
+  .u-expanded-width:not(.custom-expanded)-xxl {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (min-width: 1200px) {
+  .u-xl-mode .u-expanded-width:not(.custom-expanded)-xl {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  .u-xxl-mode .u-expanded-width:not(.custom-expanded)-xl {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .u-expanded-width:not(.custom-expanded)-lg {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .u-expanded-width:not(.custom-expanded)-md {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .u-expanded-width:not(.custom-expanded)-sm {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (max-width: 575px) {
+  .u-expanded-width:not(.custom-expanded)-xs {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
@@ -7375,54 +7407,84 @@ section.u-image:not(.u-hover-box),
 .u-expanded-height {
   position: absolute !important;
   height: 100% !important;
-  top: 0 !important;
 }
 @media (min-width: 1400px) {
   .u-expanded-height-xxl {
     position: absolute !important;
     height: 100% !important;
-    top: 0 !important;
   }
 }
 @media (min-width: 1200px) {
   .u-xl-mode .u-expanded-height-xl {
     position: absolute !important;
     height: 100% !important;
-    top: 0 !important;
   }
 }
 @media (min-width: 1200px) and (max-width: 1399px) {
   .u-xxl-mode .u-expanded-height-xl {
     position: absolute !important;
     height: 100% !important;
-    top: 0 !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .u-expanded-height-lg {
     position: absolute !important;
     height: 100% !important;
-    top: 0 !important;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .u-expanded-height-md {
     position: absolute !important;
     height: 100% !important;
-    top: 0 !important;
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
   .u-expanded-height-sm {
     position: absolute !important;
     height: 100% !important;
-    top: 0 !important;
   }
 }
 @media (max-width: 575px) {
   .u-expanded-height-xs {
     position: absolute !important;
     height: 100% !important;
+  }
+}
+.u-expanded-height:not(.custom-expanded) {
+  top: 0 !important;
+}
+@media (min-width: 1400px) {
+  .u-expanded-height:not(.custom-expanded)-xxl {
+    top: 0 !important;
+  }
+}
+@media (min-width: 1200px) {
+  .u-xl-mode .u-expanded-height:not(.custom-expanded)-xl {
+    top: 0 !important;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  .u-xxl-mode .u-expanded-height:not(.custom-expanded)-xl {
+    top: 0 !important;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .u-expanded-height:not(.custom-expanded)-lg {
+    top: 0 !important;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .u-expanded-height:not(.custom-expanded)-md {
+    top: 0 !important;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .u-expanded-height:not(.custom-expanded)-sm {
+    top: 0 !important;
+  }
+}
+@media (max-width: 575px) {
+  .u-expanded-height:not(.custom-expanded)-xs {
     top: 0 !important;
   }
 }
@@ -18468,6 +18530,20 @@ blockquote .small:before {
   -webkit-margin-before: 0;
   margin-right: 0 !important;
 }
+.u-pagination-center.u-categories-center .u-list-control.has-pagination.has-categories .u-pagination {
+  -webkit-margin-before: 0;
+  margin-right: 0 !important;
+}
+.u-pagination-left.u-categories-left .u-list-control.has-pagination.has-categories .u-pagination {
+  grid-column-end: left;
+  -webkit-margin-before: 0;
+  margin-right: 0 !important;
+}
+.u-pagination-right.u-categories-right .u-list-control.has-pagination.has-categories .u-pagination {
+  grid-column: 2;
+  -webkit-margin-before: 0;
+  margin-right: 0 !important;
+}
 .u-pagination-left .u-pagination {
   margin-left: 0 !important;
   margin-right: auto !important;
@@ -18541,6 +18617,15 @@ blockquote .small:before {
 .u-sorting-right.u-pagination-right .has-pagination.has-sorting .u-sorting {
   grid-column-start: left;
 }
+.u-sorting-center.u-categories-center .has-sorting.has-categories .u-sorting {
+  grid-column-start: left;
+}
+.u-sorting-left.u-categories-left .has-sorting.has-categories .u-sorting {
+  grid-column-start: left;
+}
+.u-sorting-right.u-categories-right .has-sorting.has-categories .u-sorting {
+  grid-column-start: left;
+}
 .u-sorting-right .u-sorting {
   margin-left: auto !important;
   margin-right: 0 !important;
@@ -18591,7 +18676,44 @@ blockquote .small:before {
 }
 .u-categories {
   display: table;
-  line-height: 1;
+}
+.u-categories-left .u-categories {
+  margin-left: 0 !important;
+  margin-right: auto !important;
+  grid-column: 1;
+}
+.u-categories-center .u-categories {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  grid-column: 2;
+}
+.u-categories-right .u-categories {
+  margin-left: auto !important;
+  margin-right: 0 !important;
+  grid-column: 3;
+}
+.u-categories-center.u-pagination-center .has-pagination.has-categories .u-categories {
+  grid-column-start: left;
+}
+.u-categories-left.u-pagination-left .has-pagination.has-categories .u-categories {
+  grid-column-start: left;
+}
+.u-categories-right.u-pagination-right .has-pagination.has-categories .u-categories {
+  grid-column-start: left;
+}
+.u-categories-center.u-sorting-center .u-list-control.has-sorting.has-categories .u-categories {
+  -webkit-margin-before: 0;
+  margin-right: 0 !important;
+}
+.u-categories-left.u-sorting-left .u-list-control.has-sorting.has-categories .u-categories {
+  grid-column-end: left;
+  -webkit-margin-before: 0;
+  margin-right: 0 !important;
+}
+.u-categories-right.u-sorting-right .u-list-control.has-sorting.has-categories .u-categories {
+  grid-column: 2;
+  -webkit-margin-before: 0;
+  margin-right: 0 !important;
 }
 .u-categories ul {
   list-style: none;
@@ -18604,6 +18726,10 @@ aside .u-categories.u-categories-vertical {
 }
 aside .u-categories.u-categories-vertical ul {
   width: 100%;
+}
+.u-categories.u-categories-vertical,
+.u-categories.u-categories-horizontal {
+  line-height: 1;
 }
 .u-categories.u-categories-vertical {
   /* indent for all tree children excepts root */
@@ -18656,6 +18782,27 @@ aside .u-categories.u-categories-vertical ul {
   display: none;
 }
 .u-categories.u-categories-horizontal ul ul {
+  display: none;
+}
+.u-categories-listbox {
+  display: block;
+  position: relative;
+  min-width: 255px;
+}
+.u-categories-listbox select {
+  height: 100%;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.u-categories-listbox .u-caret {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  pointer-events: none;
+}
+.u-categories-listbox select[size] ~ .u-caret {
   display: none;
 }
 /*begin-commonstyles photoswipe*/
@@ -21070,6 +21217,8 @@ a.pswp__share--download:hover {
   display: flex;
   position: relative;
 }
+.u-list-control.has-categories.has-sorting,
+.u-list-control.has-pagination.has-categories,
 .u-list-control.has-pagination.has-sorting {
   display: grid;
   grid-auto-flow: column;
@@ -21086,6 +21235,30 @@ a.pswp__share--download:hover {
   justify-content: left;
 }
 .u-pagination-right.u-sorting-right .u-list-control.has-pagination.has-sorting {
+  grid-template-columns: 0;
+  justify-content: right;
+}
+.u-pagination-center.u-categories-center .u-list-control.has-pagination.has-categories {
+  grid-template-columns: 0;
+  justify-content: center;
+}
+.u-pagination-left.u-categories-left .u-list-control.has-pagination.has-categories {
+  grid-template-columns: 0;
+  justify-content: left;
+}
+.u-pagination-right.u-categories-right .u-list-control.has-pagination.has-categories {
+  grid-template-columns: 0;
+  justify-content: right;
+}
+.u-sorting-center.u-categories-center .u-list-control.has-sorting.has-categories {
+  grid-template-columns: 0;
+  justify-content: center;
+}
+.u-sorting-left.u-categories-left .u-list-control.has-sorting.has-categories {
+  grid-template-columns: 0;
+  justify-content: left;
+}
+.u-sorting-right.u-categories-right .u-list-control.has-sorting.has-categories {
   grid-template-columns: 0;
   justify-content: right;
 }
@@ -21217,6 +21390,15 @@ a.pswp__share--download:hover {
 }
 .u-tabs.u-tab-links-align-right .u-tab-list {
   justify-content: flex-end;
+}
+.u-tabs.u-tab-vertical .u-tab-list {
+  flex-direction: column;
+}
+.u-tabs.u-tab-vertical .u-tab-list .u-tab-item:not(:last-child) {
+  margin-bottom: 0;
+}
+.u-tabs.u-tab-vertical .u-tab-list .u-tab-link {
+  text-align: left;
 }
 .u-tabs.u-tab-links-align-justify .u-tab-list {
   text-align: center;
@@ -21525,9 +21707,6 @@ a.pswp__share--download:hover {
 .u-product {
   display: flex;
 }
-.u-gallery.u-product-control .u-back-image {
-  object-fit: contain;
-}
 .u-product-price {
   display: table;
 }
@@ -21547,6 +21726,40 @@ a.pswp__share--download:hover {
 }
 .u-price-wrapper .u-hide-price + div {
   margin-left: 0;
+}
+.u-product-second-image {
+  display: none;
+}
+.u-product-second-image-wrapper {
+  position: relative;
+}
+.u-product-second-image-wrapper .u-image {
+  transition: all 0.7s ease;
+}
+.u-product-second-image-wrapper .u-image + .u-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.7s ease;
+}
+.u-product-second-image-wrapper > img + img,
+.u-product-second-image-wrapper > div + div {
+  opacity: 0;
+}
+.u-product-second-image-wrapper:hover > img + img,
+.u-product-second-image-wrapper:hover > div + div {
+  opacity: 1;
+}
+.u-product-second-image-wrapper:hover > img:first-child:not(:only-child),
+.u-product-second-image-wrapper:hover > div:first-child:not(:only-child) {
+  opacity: 0;
+}
+.u-rotation-parent > * {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 .u-product-quantity {
   display: table;
@@ -21682,12 +21895,28 @@ a.pswp__share--download:hover {
     grid-template-columns: 1fr;
   }
 }
-.u-payment-services {
+.u-payment-services-inner {
+  width: 100%;
+}
+.u-tabs.u-tab-payment {
+  flex-grow: 1;
+}
+.u-tabs.u-tab-payment .u-tab-link {
   display: flex;
   align-items: center;
 }
-.u-payment-services-inner {
-  width: 100%;
+.u-tabs.u-tab-payment .u-tab-link input {
+  margin-left: 0;
+  margin-right: 1em;
+}
+.u-tabs.u-tab-payment .u-tab-link svg {
+  height: 24px;
+  width: 24px;
+  margin-left: auto;
+  margin-right: 0;
+}
+.u-tabs.u-tab-payment .u-tab-item:first-child .u-tab-link {
+  border-bottom: none;
 }
 .u-dialog {
   display: flex;
@@ -22124,6 +22353,33 @@ section.u-dialog-block:not(.u-dialog-open) {
 }
 .payment-success {
   background-color: #62C584;
+}
+.payment-total-container {
+  font-weight: 700;
+  font-size: 1.25rem;
+  clear: both;
+}
+.payment-total-label {
+  float: left;
+}
+.payment-total-price {
+  float: right;
+}
+span.product-remove:after {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  content: "\D7";
+  font-size: 1rem;
+  color: #a3a3a3;
+  background: transparent;
+  border: 1px solid #a3a3a3;
+  cursor: pointer;
+  opacity: 0.70;
+  height: 35px;
+  width: 35px;
 }
 .iti {
   position: relative;
@@ -23741,9 +23997,10 @@ section.u-dialog-block:not(.u-dialog-open) {
 .u-carousel-right .u-carousel-inner .u-active.u-carousel-item-left {
   transform: translate3d(100%, 0, 0);
 }
-.u-form {
-  --checkbox-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
-  --radio-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+.u-form,
+.u-tab-payment {
+  --checkbox-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23478ac9' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+  --radio-checked-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23478ac9'/%3e%3c/svg%3e");
 }
 .u-field-input {
   border: 0;
@@ -41347,13 +41604,14 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 60px;
+  margin: 0 auto;
 }
 
 .u-header .u-image-1 {
-  width: 250px;
-  height: 90px;
-  margin: 22px auto 0 0;
+  width: 160px;
+  height: 58px;
+  margin: 0 auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -41361,73 +41619,74 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 100%;
 }
 
+.u-header .u-social-icons-1 {
+  white-space: nowrap;
+  height: 31px;
+  min-height: 16px;
+  width: 31px;
+  min-width: 16px;
+  margin: -43px 0 0 auto;
+}
+
+.u-header .u-icon-1 {
+  color: rgb(197, 54, 164) !important;
+  height: 26px;
+}
+
 .u-header .u-menu-1 {
-  margin: -32px 0 22px auto;
+  margin: -22px 118px 0 auto;
 }
 
 .u-header .u-nav-1 {
-  font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 .u-header .u-nav-2 {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 @media (max-width: 1199px) {
   .u-header .u-image-1 {
-    width: 250px;
-    height: 90px;
+    width: 160px;
+    height: 57px;
+  }
+
+  .u-header .u-social-icons-1 {
+    margin-top: -43px;
+    margin-right: 0;
   }
 
   .u-header .u-menu-1 {
-    width: auto;
-  }
-
-  .u-header .u-nav-1 {
-    letter-spacing: normal;
+    margin-top: -22px;
+    margin-right: auto;
   }
 }
 
+@media (max-width: 767px) {
+  .u-header .u-sheet-1 {
+    min-height: 148px;
+  }
 
+  .u-header .u-image-1 {
+    margin-left: auto;
+  }
 
+  .u-header .u-social-icons-1 {
+    margin-right: auto;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 165px;
+  }
+}
 .u-footer .u-sheet-1 {
-  min-height: 153px;
-}
-
-.u-footer .u-layout-wrap-1 {
-  margin: 0;
-}
-
-.u-footer .u-layout-cell-1 {
-  min-height: 121px;
-}
-
-.u-footer .u-container-layout-1 {
-  padding: 20px 30px;
-}
-
-.u-footer .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-footer .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-footer .u-layout-cell-2 {
-  min-height: 121px;
-}
-
-.u-footer .u-container-layout-2 {
-  padding: 20px 0;
+  min-height: 120px;
 }
 
 .u-footer .u-image-1 {
-  height: 113px;
-  width: 314px;
-  margin: 0 auto;
+  width: 96px;
+  height: 96px;
+  margin: 12px auto 0 0;
 }
 
 .u-footer .u-logo-image-1 {
@@ -41435,92 +41694,62 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 100%;
 }
 
-.u-footer .u-layout-cell-3 {
-  min-height: 183px;
+.u-footer .u-social-icons-1 {
+  height: 31px;
+  min-height: 16px;
+  width: 31px;
+  min-width: 16px;
+  white-space: nowrap;
+  margin: -50px 0 0 auto;
 }
 
-.u-footer .u-container-layout-3 {
-  padding: 20px 0;
+.u-footer .u-icon-1 {
+  height: 0;
 }
 
-.u-footer .u-position-2 {
-  height: auto;
-  min-height: 101px;
-  width: 300px;
-  margin: 0 auto;
+.u-footer .u-text-1 {
+  width: 631px;
+  margin: -24px auto 19px;
 }
 @media (max-width: 1199px) {
-  .u-footer .u-sheet-1 {
-    min-height: 211px;
+  .u-footer .u-social-icons-1 {
+    margin-top: -31px;
+    margin-right: 0;
   }
 
-  .u-footer .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-footer .u-container-layout-1 {
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-
-  .u-footer .u-image-1 {
-    height: 113px;
-    width: 314px;
-  }
-
-  .u-footer .u-layout-cell-3 {
-    min-height: 151px;
-  }
-
-  .u-footer .u-container-layout-3 {
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-
-  .u-footer .u-position-2 {
-    width: 293px;
+  .u-footer .u-text-1 {
+    margin-top: -24px;
   }
 }
-@media (max-width: 991px) {
-  .u-footer .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
 
-  .u-footer .u-image-1 {
-    margin-right: 20px;
-  }
-
-  .u-footer .u-layout-cell-3 {
-    min-height: 100px;
-  }
-
-  .u-footer .u-container-layout-3 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
 @media (max-width: 767px) {
   .u-footer .u-sheet-1 {
-    min-height: 151px;
-  }
-
-  .u-footer .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    min-height: 200px;
   }
 
   .u-footer .u-image-1 {
+    margin-left: 230px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: 20px;
     margin-right: auto;
   }
 
-  .u-footer .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-footer .u-text-1 {
+    width: 540px;
+    margin: 20px 0 0;
   }
 }
+@media (max-width: 575px) {
+  .u-footer .u-image-1 {
+    margin-left: auto;
+  }
 
+  .u-footer .u-text-1 {
+    width: 340px;
+  }
+}
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
